DOC-1910: Add basic overview of DOMParser and DomPurify use to Security Guide and Migration Guide (#2628)
Co-authored-by: Andrew Herron <andrew.herron@tiny.cloud>
Co-authored-by: shanmen-tiny <shanmen.ng@tiny.cloud>
Co-authored-by: mkzhx <mkzh.org@gmail.com>

--- a/modules/ROOT/pages/migration-from-5x.adoc
+++ b/modules/ROOT/pages/migration-from-5x.adoc
@@ -23,6 +23,7 @@ Open Source users: please report issues in the https://github.com/tinymce/tinymc
 * xref:plugins[Plugins]
 * xref:schema[Schema]
 * xref:ui-and-ux-elements-and-components[UI and UX elements and components]
+* xref:security[Security]
 
 == {productname} {productmajorversion} core changes
 
@@ -615,3 +616,8 @@ alignright: [
 ----
 
 Alternatively, the xref:apis/tinymce.formatter.adoc#register[Formatter API] can be used to register a custom format using `editor.formatter.register(<name>, <format>)`.
+
+[[security]]
+== Security
+
+include::partial$security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc[]
