--- a/modules/ROOT/pages/security.adoc
+++ b/modules/ROOT/pages/security.adoc
@@ -16,6 +16,7 @@ NOTE: The following is _general_ security advice that may be relevant to a websi
 * xref:general-security-risks-for-user-input-elements[General security risks for user input elements]
 ** xref:cross-site-scripting-xss[Cross-Site Scripting (XSS)]
 ** xref:injection[Injection]
+** xref:sanitizing-html-input-to-protect-against-xss-attacks[Sanitizing HTML input to protect against XSS attacks]
 ** xref:insecure-transmission-and-storage-of-data[Insecure Transmission and Storage of data]
 ** xref:broken-authentication-and-session-management[Broken Authentication and Session Management]
 ** xref:using-components-with-known-vulnerabilities[Using Components with Known Vulnerabilities]
@@ -84,6 +85,8 @@ Injection attacks involve attackers using website or application inputs to run s
 If user inputs are not properly sanitized server-side, host devices and user data can be compromised.
 
 For information on Injection-related security issues and how to reduce the risk of an attack, see: https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A1-Injection[OWASP Top Ten 2017 -- Injection].
+
+include::partial$security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc[]
 
 [[insecure-transmission-and-storage-of-data]]
 === Insecure Transmission and Storage of data
