--- a/_new_content_templates/pluginpage.adoc
+++ b/_new_content_templates/pluginpage.adoc
@@ -11,7 +11,7 @@
 :plugincode: <plugincode>
 :plugincategory: premium|opensource
 
-include::partial$misc/admon_premium_plugin.adoc[]
+include::partial$misc/admon-premium-plugin.adoc[]
 
 // Add an introduction. What does the plugin do? Why would I use this plugin? Keep it concise.
 
@@ -55,13 +55,13 @@ include::partial$configuration/<setting-name-in-hyphen-case>.adoc[]
 ////
   Toolbar buttons content, uses the pluginname and plugincode variables.
   The toolbar buttons are the same as another plugin, assign the other plugin's identifier to `altplugincode`
-  Don't forget to add this to available-toolbar-buttons.md
+  Don’t forget to add this to available-toolbar-buttons.adoc
 ////
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 ////
   Menu items content, uses the pluginname and plugincode variables.
   The menu items are the same as another plugin, assign the other plugin's identifier to `altplugincode`
-  Don't forget to add this to available-menu-items.md
+  Don’t forget to add this to available-menu-items.adoc
 ////
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
