--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -1090,7 +1090,7 @@ To address this issue, improvements made allow inline dialogs the flexability to
 === Checkmark icons are added to every color in color swatch
 //#TINY-9567
 
-In previous versions of {productname}, the color swatch feature added a checkmark icon to every color, but would only display the checkmark when one is enabled.
+In previous versions of {productname}, when using certain configurations, the color swatch feature could add a checkmark icon to every color, when the checkmark should only be displayed on a color when one is enabled.
 
 In {productname} 6.4.1, the selector for applying the checkmark is updated so the checkmark will only be added and displayed for enabled colors.
 
