--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -78,13 +78,9 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 === The editor displayed a notification error when it failed to retrieve a blob image uri.
 
-In previous versions of {productname}, a console error would be thrown when resetting the `Source` field of the **Insert Media** dialog.
+In previous versions of {productname}, when the editor contained an image with an invalid or unreachable blob url, it would display an error notification banner within the editor viewport which would impact on the user experience.
 
-As a consequence, the dropdown list with the url suggestion would not expand.
-
-To fix this issue, {productname}, updated the code for the `urlinput` component that is responsible for gathering the correct dropdown items.
-
-As a result, the dropdown list with URL suggestions now expands even on the empty Source field and the browser console is cleaned out of errors.
+A fix was applied in {productname} 6.4.2, which saw the removal of the error notification banner as a broken image would be visiblly apparent to the user.
 
 // [[security-fixes]]
 // == Security fixes
