--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -78,7 +78,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 === The image would not be inserted when the `quickimage` button was used on Chrome.
 
-In previous versions of {productname}, on MacOS Chrome, the editor `focusin` event would occur before the change event for a file input.
+In previous versions of {productname}, on MacOS Chrome, the editor `focusin` event would occur before the `change` event for a file input.
 
 As a consequence, images could not be inserted via `quickimage` button of quickbar plugin.
 
