--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -82,7 +82,7 @@ In previous versions of {productname}, on MacOS Chrome, the editor `focusin` eve
 
 As a consequence, images could not be inserted via `quickimage` button of `quickbar` plugin.
 
-To fix this, the handling of `focusin` events was delayed in order to give a time slot for the change event to be handled.
+To fix this, the handling of `focusin` events was delayed in order to give a time slot for the `change` event to be handled.
 
 As a result, the `quickimage` button functionality in {productname} 6.4.2, has now been returned to its working state.
 
