--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -76,6 +76,13 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 // {productname} 6.4.2 also includes the following bug fixes:
 
+=== Enabled variant of toggleable `tox-button` and `tox-button—​secondary`: it now supports `hover/active/focus/disabled` states.
+
+In previous versions of {productname}, the class `--enabled` for `tox-button--secondary` was not defined.
+
+As a consequence, when the button was enabled it wasn't rendered correctly.
+
+To fix this issue, the class `--enabled` for `tox-button--secondary` has now been defined in {productname} 6.4.2, which now allows the button to render correctly when enabled.
 
 // [[security-fixes]]
 // == Security fixes
