--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -80,7 +80,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 In previous versions of {productname}, when the editor contained an image with an invalid or unreachable blob url, it would display an error notification banner within the editor viewport which would impact on the user experience.
 
-A fix was applied in {productname} 6.4.2, which saw the removal of the error notification banner as a broken image would be visiblly apparent to the user.
+A fix was applied in {productname} 6.4.2, which saw the removal of the error notification banner as a broken image would be visibly apparent to the user.
 
 // [[security-fixes]]
 // == Security fixes
