--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -1096,6 +1096,8 @@ There are several known issues in {productname} 6.4.1.
 
 In previous versions of {productname}, a bug was discovered that encountered an issue with the **Accessibility Checker** dropdown. When switching between different issues, the dropdown would not re-populate on existing viewed issues.
 
+NOTE: this issue xref:6.4.2-release-notes.adoc[is addressed] in {productname} 6.4.2.
+
 === Bug with Table Icon in more drawer
 //#TINY-9723
 
