--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -1112,4 +1112,4 @@ After conducting a thorough investigation into the new **Advanced Template** plu
 
 We have identified that the "Insert link" dialog is an example of a dialog that does **not work** correctly in this regard, while the "Insert image" dialog functions as expected. These issues were discovered while examining mobile performance within the new **Advanced Template** plugin, and we are working to address them in order to provide a smoother and more user-friendly experience.
 
-Unfortunately, at this time there is no known workarounds for the issue with dialogs.
+Unfortunately, at this time there is no known workaround for the issue with dialogs.
