--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -82,7 +82,7 @@ In previous versions of {productname}, the `--enabled` css class for `tox-button
 
 As a consequence, some {productname} toolbar buttons did not render all their possible states as expected when they were selected so as to enable UI option the button represents.
 
-With this update, the `--enabled` css class has been definded. And {productname} toolbar buttons render all their  possible states as expected when the UI option a button represents is activated.
+With this update, the `--enabled` css class has been defined. And {productname} toolbar buttons render all their  possible states as expected when the UI option a button represents is activated.
 
 // [[security-fixes]]
 // == Security fixes
